Scrolling fixes on mobile 2.0

--- a/css/mq.css
+++ b/css/mq.css
@@ -2,6 +2,8 @@
     body,
     html{
         height: 100vh;
+        background-size: cover;
+        overflow-x: hidden;
     }
     .canvas-container {
         width: 360px;
@@ -23,7 +25,7 @@
         height: fit-content;
     }
     .scroll-container {
-        overflow: hidden; /* Hides both horizontal and vertical scrollbars */
+        overflow: hidden; 
     }
     
 }
